# simple-rust-neural-network

./: Cargo.toml  model.cbor
data/: .t10k-labels-idx1-ubyte.~undo-tree~
src/: .lib.rs.~undo-tree~  .main.rs.~undo-tree~  lib.rs  main.rs
